Tweaks to hero section layout on phone

--- a/css/main.css
+++ b/css/main.css
@@ -422,21 +422,18 @@ span {
     #webApps {
         width: 30rem;
     }
-    
     #githubLogo {
         display: block;
         width: 17rem;
         left: 0;
         margin-bottom: 0.5rem;
     }
-    
     #bloomberg {
         margin-top: 0.5rem;
         width: 25rem;
         left: 0;
         top: -2rem;
     }
-    
     #morganStanley {
         width: 27rem;
     }
@@ -457,12 +454,10 @@ span {
     /* Hero section */
     /* Redirect Buttons */
     #ticketsBtn {
-        width: 8.001rem !important;
-        height: 5.43375rem !important;
+        width: 7.62rem !important;
+        height: 5.175rem !important;
         top: 2.5rem !important;
         left: 0;
-        margin: 0 auto;
-        background-image: url('../img/ticketsBtn.png');
     }
     .secondaryBtn {
         width: 5.715rem;
@@ -483,10 +478,10 @@ span {
         padding: 0 10%;
     }
     .timerNumber {
-        font-size: 4.5rem;
+        font-size: 4rem;
     }
     .timerText {
-        font-size: 1rem;
+        font-size: 0.7rem;
     }
     /* Title */
     #title {
@@ -530,5 +525,32 @@ span {
     }
     #morganStanley {
         width: 20rem;
+    }
+}
+
+/* Small Phone */
+
+@media(max-width: 345px) {
+    /* Redirect Buttons */
+    #ticketsBtn {
+        width: 6.626rem !important;
+        height: 4.5rem !important;
+        top: 2.5rem !important;
+        left: 0;
+    }
+    .secondaryBtn {
+        width: 5.715rem;
+        height: 3.88125rem;
+        top: 2.3rem !important;
+    }
+    /* FAQ Section */
+    #faqTitle {
+        width: 10.99rem;
+        height: 3rem;
+    }
+    /* Sponsors Section */
+    #sponsorsTitle {
+        width: 18.75rem;
+        height: 3rem;
     }
 }
