--- a/css/main.css
+++ b/css/main.css
@@ -65,9 +65,12 @@ section {
 
 #hero>#content {
     z-index: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 #foreground {
+    pointer-events: none;
     z-index: 2;
     background-image: url('../img/heroForeground.png');
 }
@@ -91,7 +94,7 @@ section {
 #redirectButtons {
     display: block;
     position: relative;
-    margin: 5rem auto;
+    margin: 3% auto;
 }
 
 #redirectButtons * {
@@ -137,7 +140,7 @@ section {
     align-items: center;
     justify-content: center;
     list-style: none;
-    margin: 7rem auto;
+    margin: 7% auto;
 }
 
 #timerPhone {
@@ -371,6 +374,13 @@ span {
 #footerText {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 1.2rem;
+}
+
+#footerLink {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 0.8rem;
+    position: relative;
+    top: -1rem;
 }
 
 .footerLogos {
