--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,7 @@ section {
     z-index: 1;
     display: flex;
     flex-direction: column;
+    margin: auto;
 }
 
 #foreground {
@@ -94,7 +95,7 @@ section {
 #redirectButtons {
     display: block;
     position: relative;
-    margin: 3% auto;
+    margin: 2% auto;
 }
 
 #redirectButtons * {
@@ -128,10 +129,10 @@ section {
 }
 
 /* Timer */
+
 #timerContainer {
     display: block;
 }
-
 
 #timer {
     display: flex;
@@ -140,7 +141,7 @@ section {
     align-items: center;
     justify-content: center;
     list-style: none;
-    margin: 7% auto;
+    margin: 3% auto;
 }
 
 #timerPhone {
@@ -416,6 +417,15 @@ span {
     background-image: url("../img/githubLogo.png");
 }
 
+/* Big Screens */
+
+@media(min-height: 950px)
+{
+    #timer {
+        margin: 7% auto;
+    }
+}
+
 /* Tablet */
 
 @media(max-width: 1024px) {
@@ -427,9 +437,8 @@ span {
     /* Timer */
     #timer {
         padding: 0;
-        margin: 10rem auto 6    rem auto;
+        margin: 10rem auto 6 rem auto;
     }
-
     #timer>li {
         margin: 0 4.5%;
     }
@@ -578,10 +587,6 @@ span {
 /* Small Phone */
 
 @media(max-width: 345px) {
-    /* Redirect Buttons */
-    #redirectButtons {
-        top: 2.5rem !important;
-    }
     #ticketsBtn {
         width: 6.626rem !important;
         height: 4.5rem !important;
