--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ section {
 }
 
 .fullscreen {
+    background-color: red;
     position: absolute;
     background-size: cover;
     background-position: 0 100%;
