--- a/css/main.css
+++ b/css/main.css
@@ -263,7 +263,7 @@ section {
     top: -30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 500;
-    margin: -10px 5px;
+    margin: 0 7px;
     font-size: 22px;
 }
 
