--- a/css/main.css
+++ b/css/main.css
@@ -361,9 +361,40 @@ span {
     width: 37rem;
 }
 
+/* Venue section */
+
+#venue {
+    height: auto;
+    background-image: url('../img/venueBG.png');
+    background-repeat: no-repeat;
+}
+
+#venueTitleContainer
+{
+    padding-top: 8rem;
+    width: 27.3rem;
+    height: 6rem;
+    margin: 0 auto 6rem auto;
+}
+
+#venueTitle {
+    width: 100%;
+    height: 100%;
+    background-image: url('../img/venueRibbon.png');
+    background-size: cover;
+}
+
+#map {
+    margin: 5rem auto 0 auto;
+    background-color: #231F30;
+    width: 50%;
+    height: 20rem;
+}
+
 /* Footer */
 
 #footer {
+    position: relative;
     padding-top: 3rem;
     display: block;
     height: 8rem;
